--- a/Audio.Foundation.Unmanaged/Audio.Foundation.Unmanaged.vcxproj
+++ b/Audio.Foundation.Unmanaged/Audio.Foundation.Unmanaged.vcxproj
@@ -91,6 +91,8 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="Audio.Foundation.Unmanaged.h" />
+    <ClInclude Include="FileReader.h" />
+    <ClInclude Include="FileSource.h" />
     <ClInclude Include="FileWriter.h" />
     <ClInclude Include="IInputChannel.h" />
     <ClInclude Include="IMeterChannel.h" />
@@ -101,6 +103,9 @@
     <ClInclude Include="ISampleJoiner.h" />
     <ClInclude Include="ISampleReceiver.h" />
     <ClInclude Include="ISampleSharer.h" />
+    <ClInclude Include="ISampleSource.h" />
+    <ClInclude Include="ITake.h" />
+    <ClInclude Include="ITimeline.h" />
     <ClInclude Include="MeterChannel.h" />
     <ClInclude Include="ObjectFactory.h" />
     <ClInclude Include="OutputOfTSampleChannelPair.h" />
@@ -112,10 +117,15 @@
     <ClInclude Include="SampleSharer.h" />
     <ClInclude Include="framework.h" />
     <ClInclude Include="pch.h" />
+    <ClInclude Include="StreamReader.h" />
     <ClInclude Include="StreamWriter.h" />
+    <ClInclude Include="Take.h" />
+    <ClInclude Include="Timeline.h" />
     <ClInclude Include="UnknownBase.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="FileReader.cpp" />
+    <ClCompile Include="FileSource.cpp" />
     <ClCompile Include="FileWriter.cpp" />
     <ClCompile Include="MeterChannel.cpp" />
     <ClCompile Include="ObjectFactory.cpp" />
@@ -129,7 +139,10 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="StreamReader.cpp" />
     <ClCompile Include="StreamWriter.cpp" />
+    <ClCompile Include="Take.cpp" />
+    <ClCompile Include="Timeline.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
